<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_point">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_split">/</string>
    <string name="_back">⌫</string>
    <string name="_result">=</string>
    <string name="_cancel">C</string>
    <string name="memoryClear">MC</string>
    <string name="memoryPlus">M+</string>
    <string name="memoryMinus">M-</string>
    <string name="memoryRead">MR</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="genPassword">CC</string>
    <string name="valueScreen">10+3</string>
    <string name="valueScreenPreResult">13</string>
    <string name="valueColorTheme">Theme 1</string>
    <string name="colorTheme">Change the color scheme</string>
    <string name="colorTheme1">colorTheme_1</string>
    <string name="colorTheme2">colorTheme_2</string>
    <string name="hintMemory">M</string>
</resources>