<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/keyboard_layout"
                                                   android:background="@android:color/holo_blue_dark"
                                                   android:scrollbarSize="4dp"
                                                   android:scrollbars="vertical">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/leather_967243_640"
            android:id="@+id/textureBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_back"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foregroundGravity="top"
            tools:ignore="ContentDescription"
            android:scaleType="fitXY"/>

    <TextView
            android:text="@string/valueScreenPreResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/button_generate_password"
            app:layout_constraintEnd_toEndOf="@+id/button_percent"
            app:layout_constraintBottom_toTopOf="@+id/button_generate_password"
            android:layout_marginBottom="@dimen/padding_between_buttons"
            android:textSize="@dimen/pre_view_text"
            android:background="#4FFF5722"
            android:textColor="@color/colorMemory"
            android:textStyle="italic"
            android:textAlignment="textEnd"
            android:lineSpacingMultiplier="0.8"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_marginTop="6dp"
        android:text="@string/_1"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@+id/button_4"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:layout_marginTop="@dimen/padding_between_buttons"
        android:text="@string/_2"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_1"
        app:layout_constraintEnd_toEndOf="@+id/button_5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:layout_marginTop="@dimen/padding_between_buttons"
        android:text="@string/_3"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_marginTop="6dp"
        android:text="@string/_4"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:layout_marginTop="@dimen/padding_between_buttons"
        android:text="@string/_5"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_4"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:layout_marginTop="@dimen/padding_between_buttons"
        android:text="@string/_6"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toEndOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_marginStart="@dimen/start_margin_screen"
        android:text="@string/_7"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_8"/>
    <com.google.android.material.button.MaterialButton
        android:text="@string/_8"
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="384dp"
        app:layout_constraintStart_toEndOf="@+id/button_4"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:text="@string/_9"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/padding_between_buttons"
        android:text="@string/_0"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:backgroundTint="@color/colorNumberButton"
        android:text="@string/_point"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintEnd_toEndOf="@+id/button_3"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:text="@string/_plus"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="@+id/button_result"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_6"
        style="@style/action_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:text="@string/_minus"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_9"
        style="@style/action_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_marginEnd="@dimen/padding_between_buttons"
        android:layout_marginBottom="@dimen/padding_between_buttons"
        android:text="@string/_multiply"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_back"
        app:layout_constraintStart_toStartOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_back"
        style="@style/action_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_split"
        android:layout_marginBottom="@dimen/padding_between_buttons"
        android:text="@string/_split"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_multiply"
        style="@style/action_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_between_buttons"
        android:backgroundTint="@color/colorTopButton"
        android:text="@string/_result"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button_point"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toTopOf="@+id/button_3"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        android:layout_marginBottom="@dimen/padding_between_buttons"
        android:text="@string/_back"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintStart_toStartOf="@+id/button_minus"
        style="@style/action_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/cancel_style"
        android:text="@string/_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button_split"
        app:layout_constraintEnd_toEndOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_split" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_memory_clear"
        android:text="@string/memoryClear"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel"
        app:layout_constraintEnd_toEndOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="@+id/button_cancel"
        style="@style/mem_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_memory_plus"
        android:text="@string/memoryPlus"
        app:layout_constraintBottom_toTopOf="@+id/button_split"
        app:layout_constraintEnd_toEndOf="@+id/button_split"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_memory_clear"
        app:layout_constraintVertical_bias="0.0"
        style="@style/mem_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_memory_minus"
        android:text="@string/memoryMinus"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_memory_plus"
        style="@style/mem_button"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_memory_read"
        android:text="@string/memoryRead"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="@+id/button_back"
        app:layout_constraintStart_toStartOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="@+id/button_memory_minus"
        style="@style/mem_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="@+id/button_sqrt"
        app:layout_constraintEnd_toEndOf="@+id/button_memory_read"
        app:layout_constraintStart_toStartOf="@+id/button_memory_read"
        app:layout_constraintTop_toTopOf="@+id/button_sqrt"
        style="@style/top_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_generate_password"
        android:text="@string/genPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_memory_clear"
        app:layout_constraintEnd_toEndOf="@+id/button_memory_clear"
        app:layout_constraintStart_toStartOf="@+id/button_memory_clear"
        style="@style/top_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_square"
        android:text="@string/square"
        app:layout_constraintBottom_toBottomOf="@+id/button_generate_password"
        app:layout_constraintEnd_toEndOf="@+id/button_memory_plus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_memory_plus"
        app:layout_constraintTop_toTopOf="@+id/button_generate_password"
        style="@style/top_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sqrt"
        style="@style/top_button"
        android:text="@string/sqrt"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_square"
        app:layout_constraintEnd_toEndOf="@+id/button_memory_minus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_memory_minus"
        app:layout_constraintTop_toTopOf="@+id/button_square"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:text="@string/valueScreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/button_generate_password"
            app:layout_constraintEnd_toEndOf="@+id/button_percent"
            app:layout_constraintBottom_toTopOf="@+id/button_generate_password"
            android:layout_marginBottom="75dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/view_text"
            android:background="#4FFF5722"
            android:textColor="@color/colorScreen"
            android:textStyle="italic"
            android:textAlignment="textEnd"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hintMemory"

            android:lineSpacingMultiplier="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>